# sqlc-rust

./: 2  Cargo.toml  README.md  temp.txt
examples/authors/: Cargo.toml  sqlc.yaml
examples/authors-async/: Cargo.toml  sqlc.yaml
examples/authors-async/postgresql/: query.sql
examples/authors-async/src/: main.rs
examples/authors-async/src/db/: gen.rs
examples/authors-deadpool/: :w  Cargo.toml  sqlc.yaml
examples/authors-deadpool/postgresql/: query.sql
examples/authors-deadpool/postgresql/migrations/: V00001__initial.sql
examples/authors-deadpool/src/: main.rs
examples/authors-deadpool/src/db/: gen.rs  store.rs
examples/authors/postgresql/: query.sql
examples/authors/postgresql/migrations/: V00001__initial.sql
examples/authors/src/: main.rs
examples/authors/src/db/: gen.bk.rs  gen.rs
examples/batch/: Cargo.toml  build.rs  sqlc.yaml
examples/batch/postgresql/: query.sql
examples/batch/postgresql/migrations/: V00001__initial.sql
examples/batch/src/: generated.rs  main.rs  manual.rs
examples/batch/src/db/: gen.rs
sqlc-core/: Cargo.toml
sqlc-core/src/: batch-results.rs  batch_results.rs  error.rs  from_postgres_row.rs  lib.rs
sqlc-core/src/dbtx/: mod.rs  pg.rs  tokio_pg.rs
sqlc-derive/: Cargo.toml
sqlc-derive/src/: lib.rs
sqlc-gen/: Cargo.toml  LICENSE  Makefile  README.md  buf.gen.yaml  build.rs
sqlc-gen/examples/authors/: sqlc.yaml
sqlc-gen/examples/authors/postgresql/: gen.rs  query.sql  schema.sql
sqlc-gen/examples/batch/: sqlc.json
sqlc-gen/examples/batch/postgresql/: gen.rs  query.sql
sqlc-gen/examples/booktest/: sqlc.yaml
sqlc-gen/examples/booktest/postgresql/: query.sql
sqlc-gen/examples/jets/: sqlc.json
sqlc-gen/examples/jets/postgresql/: gen.rs
sqlc-gen/examples/ondeck/: sqlc.json
sqlc-gen/examples/ondeck/postgresql/: gen.rs
sqlc-gen/examples/ondeck/postgresql/query/: city.sql
sqlc-gen/examples/ondeck/postgresql/schema/: 0002_venue.sql
sqlc-gen/src/: main.rs
sqlc-gen/src/codegen/: mod.rs  multi_line.rs  options.rs  pg_data_type.rs  plugin.rs  type_const.rs  type_enum.rs  type_method.rs  type_query.rs  type_struct.rs
sqlc-gen/src/codegen/type_struct/: field.rs  mod.rs  params.rs  row.rs  table.rs
