[package]
name = "sqlc-core"
version = "0.3.0"
edition = "2021"

[dependencies]
deadpool-postgres = { version = "0.14.0", optional = true }
postgres = { version = "0.19.9", optional = true }
postgres-types = "0.2.8"
thiserror = "1.0.64"
tokio-postgres = { version = "0.7.12", optional = true }
cfg_block = "0.2.0"

bit-vec-06 = { version = "0.6", package = "bit-vec", optional = true }
cidr-02 = { version = "0.2", package = "cidr", optional = true }
# # eui48-04 will stop compiling and support will be removed
# # See https://github.com/sfackler/rust-postgres/issues/1073
eui48-04 = { version = "0.4", package = "eui48", optional = true }
eui48-1 = { version = "1.0", package = "eui48", optional = true, default-features = false }
geo-types-06 = { version = "0.6", package = "geo-types", optional = true }
geo-types-0_7 = { version = "0.7", package = "geo-types", optional = true }
serde-1 = { version = "1.0", package = "serde", optional = true }
serde_json-1 = { version = "1.0", package = "serde_json", optional = true }
uuid-08 = { version = "0.8", package = "uuid", optional = true }
uuid-1 = { version = "1.0", package = "uuid", optional = true }
time-02 = { version = "0.2", package = "time", optional = true }
time-03 = { version = "0.3", package = "time", default-features = false, optional = true }
futures = { version = "0.3.31", optional = true }
pin-project = "1.1.7"
async-trait = "0.1.83"
deadpool = "0.12.1"
sqlc-derive = { version = "0.3.0", path = "../sqlc-derive" }

[features]
# default = ["with-postgres"]
with-postgres = ["postgres", "sqlc-derive/with-postgres"]
with-tokio-postgres = ["tokio-postgres", "sqlc-derive/with-tokio-postgres"]
with-deadpool = ["futures", "deadpool-postgres", "with-tokio-postgres", "sqlc-derive/with-deadpool"]

with-bit-vec-0_6 = ["bit-vec-06", "postgres/with-bit-vec-0_6", "tokio-postgres/with-bit-vec-0_6"]
with-cidr-0_2 = ["cidr-02", "postgres-types/with-cidr-0_2"]
with-eui48-0_4 = ["eui48-04", "postgres/with-eui48-0_4", "tokio-postgres/with-eui48-0_4"]
with-eui48-1 = ["eui48-1", "postgres/with-eui48-1", "tokio-postgres/with-eui48-1"]
with-geo-types-0_6 = ["geo-types-06", "postgres/with-geo-types-0_6", "tokio-postgres/with-geo-types-0_6"]
with-geo-types-0_7 = ["geo-types-0_7", "postgres/with-geo-types-0_7", "tokio-postgres/with-geo-types-0_7"]
with-serde_json-1 = ["serde-1", "serde_json-1", "postgres/with-serde_json-1", "tokio-postgres/with-serde_json-1"]
with-uuid-0_8 = ["uuid-08", "postgres/with-uuid-0_8", "tokio-postgres/with-uuid-0_8"]
with-uuid-1 = ["uuid-1", "postgres/with-uuid-1", "tokio-postgres/with-uuid-1"]
with-time-0_2 = ["time-02", "postgres/with-time-0_2", "tokio-postgres/with-time-0_2"]
with-time-0_3 = ["time-03", "postgres/with-time-0_3", "tokio-postgres/with-time-0_3"]
futures = ["dep:futures"]
