[package]
name = "sqlc-gen"
version = "0.4.0"
edition = "2018"

[profile.release]
lto = true

[dependencies]
sqlparser = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
bytes = "1.1.0"
syn = "2.0.77"
quote = "1.0.37"
prettyplease = "0.2.25"
convert_case = "0.6.0"
proc-macro2 = "1.0.86"
postgres-types = "0.2.7"
strum = "0.26.3"
strum_macros = "0.26.4"
itertools = "0.13.0"
pluralizer = "0.4.0"
check_keyword = "0.3.1"
base64 = "0.22.1"
sqlc_sqlc_community_neoeinstein-prost = { version = "0.4.0-20231002190240-3f2d312ab6fd.1", registry = "buf" }
