[package]
name = "authors-async"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-vec = { version = "0.6", features = ["serde"] }
cidr = { version = "0.2", features = ["serde"] }
eui48 = { version = "1.1.0", features = ["serde"] }
geo-types = { version = "0.7", features = ["serde"] }
postgres-derive = "0.4.6"
postgres-types = "0.2.8"
postgresql_embedded = { version = "0.16.3", features = ["blocking", "bundled"] }
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
serde = { version = "1.0.210", optional = true }
serde_json = { version = "1.0.128", optional = true }
sqlc-core = { path = "../../sqlc-core", default-features = false, features = ["with-bit-vec-0_6", "with-cidr-0_2", "with-eui48-1", "with-geo-types-0_7", "with-serde_json-1", "with-time-0_3", "with-tokio-postgres", "with-uuid-1"] }
sqlc-derive = { path = "../../sqlc-derive", default-features = false, features = ["with-tokio-postgres"] }
time = { version = "0.3.36", features = ["local-offset", "serde"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "with-time-0_3", "array-impls"] }
uuid = { version = "1.10.0", features = ["serde"] }

[features]
default = ["serde_support"]
serde_support = ["serde", "serde_json"]
