[package]
name = "authors-deadpool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
deadpool = "0.12.1"
deadpool-postgres = "0.14.0"
postgres-types = "0.2.8"
postgresql_embedded = { version = "0.16.3", features = ["blocking", "bundled"] }
refinery = { version = "0.8.14", features = ["postgres", "tokio-postgres"] }
sqlc-core = { version = "0.1.0", path = "../../sqlc-core" }
sqlc-derive = { version = "0.1.0", path = "../../sqlc-derive", default-features = false, features = ["with-tokio-postgres"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "with-time-0_3", "array-impls"] }
