[package]
name = "authors"
version = "0.1.0"
edition = "2021"

[dependencies]
cidr = "0.2"
eui48 = "1.1.0"
postgres = "0.19.9"
postgres-types = "0.2.8"
postgresql_embedded = { version = "0.16.3", features = ["blocking", "bundled"] }
refinery = { version = "0.8.14", features = ["postgres"] }
serde = "1.0.210"
serde_json = "1.0.128"
sqlc-core = { version = "0.1.0", path = "../../sqlc-core", features = ["with-cidr-0_2", "with-eui48-1", "with-serde_json-1", "with-time-0_3", "with-uuid-1"], default-features = false }
sqlc-derive = { version = "0.1.0", path = "../../sqlc-derive" }
time = { version = "0.3.36", features = ["local-offset", "serde"] }
uuid = "1.10.0"
